--- a/re Golden Miner/re Golden Miner.vcxproj
+++ b/re Golden Miner/re Golden Miner.vcxproj
@@ -147,6 +147,8 @@
     <ClInclude Include="List.h" />
     <ClInclude Include="miner.h" />
     <ClInclude Include="object.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="prop.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
