--- a/re Golden Miner/re Golden Miner.vcxproj.filters
+++ b/re Golden Miner/re Golden Miner.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="counters.h">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="prop.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
